# EasyFlaskApp

./: .env.sample  README.md  changelog.md  config.py  mysql_scripts.sql  pyproject.toml
app/: __init__.py
app/db/: database.py  models.py
app/examples/: __init__.py  controllers.py
app/home/: __init__.py  controllers.py
app/mod_auth/: __init__.py  controllers.py
app/templates/: 404.html  500.html
app/templates/auth/: login-2fa.html  login.html  setup-2fa.html  signup.html
app/templates/examples/: sentiment-analysis.html
app/templates/home/: index.html
app/templates/includes/: footer.html  navigation.html  sidebar.html
app/templates/layouts/: base.html
utils/: two_factors.py
